--- a/manual/en/blender/Lighting-and-Rendering.html
+++ b/manual/en/blender/Lighting-and-Rendering.html
@@ -152,6 +152,9 @@
 
           <dt>FXAA</dt>
           <dd>force FXAA.</dd>
+
+          <dt>None</dt>
+          <dd>disable anti-aliasing.</dd>
         </dl>
       </dd>
 
