--- a/manual/en/introduction/Asset-compression.html
+++ b/manual/en/introduction/Asset-compression.html
@@ -168,7 +168,7 @@
     </p>
 
     <p>
-      To compress a file you can right click it, and then choose "7-Zip" -> "Add to arcive..." - this
+      To compress a file you can right click it, and then choose "7-Zip" -> "Add to archive..." - this
       opens the corresponding dialog window:
     </p>
 
