--- a/manual/en/introduction/FAQ.html
+++ b/manual/en/introduction/FAQ.html
@@ -121,7 +121,7 @@
     <h3>Can I export my scene to a standalone all-in HTML file?</h3>
 
     <p>
-    Nope, there is no all-in HTML format offered by Verge3D. If you need a standalone executable you can try to convert it with <a href="https://electronjs.org/" target="_blank">Electron</a>.
+    Nope, there is no all-in HTML format offered by Verge3D. If you need a standalone executable you can try to convert it with <a href="https://www.electronjs.org/docs/tutorial/application-distribution#manual-distribution" target="_blank">Electron</a>.
     </p>
 
     [anchor:cinema4d]
