--- a/manual/en/introduction/Features.html
+++ b/manual/en/introduction/Features.html
@@ -90,9 +90,9 @@
       </tr>
 
       <tr>
-        <td class="centered">Blender 2.80-2.83</td>
+        <td class="centered">Blender 2.80-2.90</td>
         <td class="centered">Autodesk 3ds Max 2018-2021</td>
-        <td class="centered">Autodesk Maya 2017-2020</td>
+        <td class="centered">Autodesk Maya 2017-2021</td>
       </tr>
 
       <tr>
@@ -208,7 +208,7 @@
               </ul>
             </li>
             <li>
-              Image-based lighting via aiSkyDomeLight
+              Image-based lighting via aiSkyDomeLight and shading nodes.
             </li>
           </ul>
         </td>
@@ -276,6 +276,7 @@
           <ul>
             <li>Skeletal armature-based animation.</li>
             <li>Object transform animation, including position, rotation and scale.</li>
+            <li>Material params animation.</li>
             <li>Blend shapes (morphing) animation.</li>
           </ul>
         </td>
@@ -310,7 +311,9 @@
             <li>Enabling post-processing effects.</li>
             <li>Managing app logic and data.</li>
             <li>Doing math.</li>
+            <li>Running custom JavaScript code.</li>
           </ul>
+          <p>In addition to that, you can create you own blocks using Puzzles plug-ins.</p>
         </td>
       </tr>
 
@@ -359,7 +362,7 @@
       <tr id="feature_postprocessing">
         <th>Post-processing effects</th>
         <td colspan=3>
-          The following effects can be enabled with Puzzles:
+          The following effects can be <a href="manual/en/puzzles/Postprocessing.html">enabled with Puzzles</a>:
           <ul>
             <li>Ambient Occlusion</li>
             <li>Bloom</li>
@@ -416,21 +419,21 @@
       <tr id="feature_physics">
         <th>Physics</th>
         <td colspan=3>
-          The physics module enables for collision detection, dynamically moving objects, support for characters and vehicles, springs, ropes and cloth simulation. As of version 2.11, physics simulations can be created and controlled without coding via Puzzles.
+          The <a href="manual/en/introduction/Physics-Guide.html">physics module</a> enables for collision detection, dynamically moving objects, support for characters and vehicles, springs, ropes and cloth simulation. As of version 2.11, physics simulations can be created and controlled without coding via Puzzles.
         </td>
       </tr>
 
       <tr id="feature_audio">
         <th>Audio</th>
         <td colspan=3>
-          Background music and/or audio samples can be added with Sound puzzles or JavaScript. In addition, you can program positional audio sources and listeners using Web Audio API back-end.
+          Background music and/or audio samples can be added with <a href="manual/en/puzzles/Sound.html">audio puzzles</a> or JavaScript. In addition, you can program positional audio sources and listeners using Web Audio API back-end.
         </td>
       </tr>
 
       <tr id="feature_video">
         <th>Video</th>
         <td colspan=3>
-          Video textures can be assigned and played with Video puzzles or JavaScript.
+          Video textures can be assigned and played with <a href="manual/en/puzzles/Sound.html">video puzzles</a> or JavaScript.
         </td>
       </tr>
 
@@ -441,8 +444,18 @@
         <th>Verge3D for Maya</th>
       </tr>
       <tr>
-        <td class="centered">Blender Essential Pack<br>Blender Jewelry Pack</td>
-        <td class="centered">3ds Max Essential Pack</td>
+        <td>
+          <ul>
+            <li>Blender Essential Pack</li>
+            <li>Blender Jewelry Pack</li>
+          </ul>
+          <p>See <a href="manual/en/blender/Material-Library.html">here</a> on how to use material packs in Verge3D for Blender.</p>
+        </td>
+        <td>
+          <ul>
+            <li>3ds Max Essential Pack</li>
+          </ul>
+        </td>
         <td class="centered">TBD</td>
       </tr>
 
@@ -451,19 +464,24 @@
         <td colspan=3>
           Over 150 coding examples and a series of full-featured demo applications including:
           <ul>
-            <li>Augmented Reality — basic AR demo.</li>
-            <li>Custom Image — a virtual picture frame which allows uploading, storing and sharing your images.</li>
-            <li>Farmer's Journey — arcade browser game made without coding.</li>
-            <li>Industrial Robot VR — interactive robot simulator with AR and VR capabilities.</li>
-            <li>Jewelry Configurator — advanced jewelry customizer for e-commerce.</li>
-            <li>Load Unload — example on how to use dynamic asset loading.</li>
-            <li>Parametric Models — 3D configurator featuring parametric modelling tools.</li>
-            <li>Recliner — 3D configurator and ready-to-use e-commerce website.</li>
-            <li>Ring — simple 3D jewelry customizer with online ordering capabilities.</li>
-            <li>Scooter — advanced 3D configurator with realistic PBR materials and millions possible combinations.</li>
-            <li>Simple Configurator — basic tutorial demo for e-commerce.</li>
-            <li>Teapot Heater — non-trivial interactive 3D animation made with Puzzles.</li>
-            <li>Video Texture — video texture usage example.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/augmented_reality/augmented_reality.html" target="_blank">Augmented Reality</a> — basic AR demo.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/custom_image/custom_image.html" target="_blank">Custom Image</a> — a virtual picture frame which allows uploading, storing and sharing your images.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/farmers_journey/index.html" target="_blank">Farmer's Journey</a> — arcade browser game made without coding.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/industrial_robot/index.html" target="_blank">Industrial Robot VR</a> — interactive robot simulator with AR and VR capabilities.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/jewelry_configurator/index.html" target="_blank">Jewelry Configurator</a> — advanced jewelry customizer for e-commerce.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/load_unload/load_unload.html" target="_blank">Load Unload</a> — example on how to use dynamic asset loading.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/parametric_models/index.html" target="_blank">Parametric Models</a> — 3D configurator featuring parametric modelling tools.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/pbr/pbr.html" target="_blank">PBR</a> — a demo featuring glTF 2.0 compatible materials.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/recliner/index.html" target="_blank">Recliner</a> — 3D configurator and ready-to-use e-commerce website.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf" target="_blank">Ring</a> — simple 3D jewelry customizer with online ordering capabilities.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter</a> — advanced 3D configurator with realistic PBR materials and millions possible combinations.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/scroll_animation/scroll_animation.html" target="_blank">Scroll Animation</a> — demo featuring modern scrollable website with customizable 3D model.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/simple_configurator/simple_configurator.html" target="_blank">Simple Configurator</a> — basic tutorial demo for e-commerce.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/spinner/spinner.html" target="_blank">Spinner</a> — basic product presentation with customized materials and animation.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/swiss_army_knife/index.html" target="_blank">Swiss Army Knife</a> — advanced tutorial demo for e-commerce.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/teapot_heater/index.html" target="_blank">Teapot Heater</a> — non-trivial interactive 3D animation made with Puzzles.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/vehicle/vehicle.html" target="_blank">Vehicle</a> — racing demo with advanced physics simulations.</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/video_texture/video_texture.html" target="_blank">Video Texture</a> — video texture usage example.</li>
           </ul>
         </td>
       </tr>
