--- a/manual/en/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/en/introduction/Puzzles-Visual-Logic-Editor.html
@@ -319,7 +319,7 @@
         <ul>
         <li><a href='manual/en/puzzles/HTML.html'>HTML</a></li>
         <li><a href='manual/en/puzzles/AR_VR.html'>AR/VR</a></li>
-        <li><a href='manual/en/puzzles/Sound.html'>Sound</a></li>
+        <li><a href='manual/en/puzzles/Sound.html'>Audio/Video</a></li>
         <li><a href='manual/en/puzzles/Physics.html'>Physics (and Constraints)</a></li>
         <li><a href='manual/en/puzzles/Postprocessing.html'>Post-processing</a></li>
         </ul>
