--- a/manual/en/introduction/Useful-links.html
+++ b/manual/en/introduction/Useful-links.html
@@ -84,6 +84,9 @@
         [link:https://www.linkedin.com/company/soft8soft/ Soft8Soft on LinkedIn] — the company profile page.
       </li>
       <li>
+        [link:https://discord.gg/TaG7QY8 Verge3D on Discord] — community-driven discussion channel.
+      </li>
+      <li>
         [link:https://www.instagram.com/soft8soft/ Soft8Soft on Instagram] — fresh Verge3D and WebGL news, Sneak Peek shots, behind the scenes photos and videos.
       </li>
       <li>
