--- a/manual/en/max/GLTF-Materials.html
+++ b/manual/en/max/GLTF-Materials.html
@@ -122,6 +122,14 @@
     <p>When exporting textures from Substance Painter, choose *Verge3d for 3ds Max* in the export dialog window so that all generated textures are compatible with the glTF 2.0 standard Verge3D is based on.</p>
 
 
+    [anchor:export_to_gltf_in_runtime]
+
+    <h2>Export to glTF in Runtime</h2>
+
+    <p>With *export to gltf* puzzle you can export your models or the entire scene in realtime. Then you can download the exported model or upload to the server for permanent storage. See more in the puzzle's <a href="manual/en/puzzles/Scenes.html#export_to_gltf">reference</a>.</p>
+
+
+
     <h2>Got Questions?</h2>
 
     <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
