--- a/manual/en/max/Lighting-and-Rendering.html
+++ b/manual/en/max/Lighting-and-Rendering.html
@@ -110,6 +110,7 @@
       <li>*MSAA 8x* — prefer multisample anti-aliasing with 8x samples if the target hardware supports it.</li>
       <li>*MSAA 16x* — prefer multisample anti-aliasing with 16x samples if the target hardware supports it.</li>
       <li>*FXAA* — force FXAA.</li>
+      <li>*None* — disable anti-aliasing.</li>
     </ul>
 
     <p>*Use HDR Rendering* — enable high-dynamic-range rendering.</p>
