--- a/manual/en/maya/Animation.html
+++ b/manual/en/maya/Animation.html
@@ -75,9 +75,8 @@
     <h3>Material Animation</h3>
 
     <p>
-      Keyframed material animation is not supported in Verge3D for Maya yet. However, by using procedural animation and the <a href='manual/en/puzzles/Materials.html#materials_set_color'>set color</a> or <a href='manual/en/puzzles/Materials.html#materials_set_value'>set value</a> puzzles you can manipulate material parameters in real time.
+      To use keyframed material animation, simply set key on any material parameter.
     </p>
-
 
     [anchor:Procedural_Animation]
 
