--- a/manual/en/maya/Camera.html
+++ b/manual/en/maya/Camera.html
@@ -61,13 +61,16 @@
     </ul>
 
     <p>
-      *Rotate Speed* - camera rotation speed factor.
+      *Rotation Speed* - camera rotation speed factor.
     </p>
     <p>
-      *Move Speed* - camera movevent speed factor.
+      *Movement Speed* - camera movevent speed factor.
     </p>
     <p>
-      *Pivot Distance Limits* - distance limits for Orbit camera.
+      *Perspective Distance Limits* - distance limits for perspective Orbit camera.
+    </p>
+    <p>
+      *Orthographic Zoom Limits* - zoom limits for othographic Orbit camera.
     </p>
     <p>
       *Vertical Angle Limits* - vertical angle limits for Orbit camera.
@@ -75,6 +78,13 @@
     <p>
       *Horizontal Angle Limits* - horizontal angle limits for Orbit camera.
     </p>
+
+    <p>*Collision Material* - collision material which will be used for the first-person camera.</p>
+
+    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+
+    <p>*Story Height* - first-person camera story height.</p>
+
 
     <p>
       *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/en/maya/Lighting-and-Rendering.html#Background">here</a>.
