--- a/manual/en/maya/Materials.html
+++ b/manual/en/maya/Materials.html
@@ -32,10 +32,13 @@
         Surface Shader
       </li>
       <li>
+        aiFlat
+      </li>
+      <li>
         aiMixShader
       </li>
       <li>
-        aiFlat
+        aiRaySwitch
       </li>
     </ul>
 
@@ -44,46 +47,94 @@
 
     <ul>
       <li>
-        File
-      </li>
-      <li>
         2d Placement
-      </li>
-      <li>
-        Bump 2d
-      </li>
-      <li>
-        Ramp
-      </li>
-      <li>
-        Sampler Info
-      </li>
-      <li>
-        Layered Texture
-      </li>
-      <li>
-        Color Composite
-      </li>
-      <li>
-        Float Composite
-      </li>
-      <li>
-        Color Constant
-      </li>
-      <li>
-        Float Constant
-      </li>
-      <li>
-        aiNormalMap
-      </li>
-      <li>
-        aiFacingRatio
       </li>
       <li>
         animCurveTA
       </li>
       <li>
         animCurveTU
+      </li>
+      <li>
+        Blend Colors
+      </li>
+      <li>
+        Bump 2d
+      </li>
+      <li>
+        Channels (part of lookdevKit plugin)
+      </li>
+      <li>
+        Checker
+      </li>
+      <li>
+        Clamp
+      </li>
+      <li>
+        Color Composite (part of lookdevKit plugin)
+      </li>
+      <li>
+        Color Constant (part of lookdevKit plugin)
+      </li>
+      <li>
+        Color Math (part of lookdevKit plugin)
+      </li>
+      <li>
+        Condition
+      </li>
+      <li>
+        Env Sphere
+      </li>
+      <li>
+        File
+      </li>
+      <li>
+        Float Composite (part of lookdevKit plugin)
+      </li>
+      <li>
+        Float Constant (part of lookdevKit plugin)
+      </li>
+      <li>
+        Float Math (part of lookdevKit plugin)
+      </li>
+      <li>
+        Gamma Correct
+      </li>
+      <li>
+        Layered Texture
+      </li>
+      <li>
+        Multiply Divide
+      </li>
+      <li>
+        Premultiply (part of lookdevKit plugin)
+      </li>
+      <li>
+        Ramp
+      </li>
+      <li>
+        Reverse
+      </li>
+      <li>
+        Sampler Info
+      </li>
+      <li>
+        Set Range
+      </li>
+      <li>
+        Unpremultiply (part of lookdevKit plugin)
+      </li>
+      <li>
+        Unit Conversion
+      </li>
+      <li>
+        aiFacingRatio
+      </li>
+      <li>
+        aiNormalMap
+      </li>
+      <li>
+        <a href="manual/en/maya/Materials.html#aiOslShader">aiOslShader</a>
       </li>
     </ul>
 
@@ -175,6 +226,15 @@
 
     <p>
       In Verge3D, these materials will be approximated by the PBR shading model, thus they might look differently compared to Maya Viewport.
+    </p>
+
+
+    [anchor:aiOslShader]
+
+    <h2>aiOslShader</h2>
+
+    <p>
+      Node to create custom OSL shaders.
     </p>
 
 
