--- a/manual/en/puzzles/AR_VR.html
+++ b/manual/en/puzzles/AR_VR.html
@@ -51,14 +51,14 @@
     Enters the virtual reality mode. Puzzles placed in the *on enter do* and *on exit do* slots are triggered upon entering or exiting the VR mode. Puzzles placed in the *if unavailable do* are triggered if a VR session could not be established.
     </p>
 
-    <p>VR camera modes:</p>
+    <p>VR positioning modes:</p>
 
     <ul>
       <li>
         *sitting or standing* - immobile camera positioned at some height above the ground.
       </li>
       <li>
-        *room* - mobile camera located inside some bounds such as room (e.g. for HTC Vive).
+        *room* - mobile camera located inside some bounds such as room (e.g. for HTC Vive, Oculus Quest).
       </li>
       <li>
         *looking around* - immobile camera positioned at zero coordinates.
@@ -117,8 +117,27 @@
     Enters the augmented reality mode. Puzzles placed in the *on enter do* and *on exit do* slots are triggered upon entering or exiting the AR mode. Puzzles placed in the *if unavailable do* are triggered if a AR session could not be established.
     </p>
 
-    <img src="files/puzzles/puzzles-ar-vr-enter-ar-mode.jpg">
+    <p>AR positioning modes:</p>
 
+    <ul>
+      <li>
+        *sitting or standing* - immobile camera positioned at some height above the ground.
+      </li>
+      <li>
+        *room* - mobile camera located inside some bounds such as room.
+      </li>
+      <li>
+        *looking around* - immobile camera positioned at zero coordinates.
+      </li>
+      <li>
+        *walking* - mobile unbounded camera.
+      </li>
+      <li>
+        *viewer locked* - immobile camera positioned at zero coordinates. All content is parented to the view.
+      </li>
+    </ul>
+
+    <img src="files/puzzles/puzzles-ar-vr-enter-ar-mode.jpg">
 
 
     [anchor:ar_hit_test]
