--- a/manual/en/puzzles/HTML.html
+++ b/manual/en/puzzles/HTML.html
@@ -72,6 +72,17 @@
     <img src="files/puzzles/puzzles-html-set-attr.jpg">
 
 
+    [anchor:create_css_rule]
+
+    <h3>create css rule</h3>
+
+    <p>
+    Creates a new <a href="https://www.w3schools.com/css/css_syntax.asp" target="_blank">CSS rule</a>. The "in parent doc" checkbox should be enabled if the style sheets belong to an external HTML document (in which Verge3D application's <strong>.html</strong> file is embedded using <strong>iframe</strong>).
+    </p>
+
+    <img src="files/puzzles/puzzles-html-create-css-rule.jpg">
+
+
 
     [anchor:set_style]
 
