--- a/manual/en/puzzles/Objects.html
+++ b/manual/en/puzzles/Objects.html
@@ -159,7 +159,7 @@
 
     <h3>set object direction</h3>
 
-    <p>Set an object's direction to the point with *X*,*Y*,*Z* coordinates. The *lock up* checkbox locks the up-down axis of the object so it remains perpendicular to the horizontal surface.</p>
+    <p>Set an object's direction to the point/vector with *X*, *Y*, *Z* coordinates. The *point* checkbox specifies whether the *X*, *Y*, *Z* coordinates belong to some point in 3D space or represent a direction vector. The *lock up* checkbox locks the up-down axis of the object so it remains perpendicular to the horizontal surface.</p>
 
     <img src="files/puzzles/puzzles-object-set-object-direction.jpg">
 
@@ -169,7 +169,7 @@
 
     <h3>get object direction</h3>
 
-    <p>Returns an object's direction vector or numeric *X*,*Y*,*Z* vector components.</p>
+    <p>Returns an object's direction vector or numeric *X*, *Y*, *Z* vector components.</p>
 
     <img src="files/puzzles/puzzles-object-get-object-direction.jpg" style="max-width: 745px">
 
@@ -321,13 +321,25 @@
 
     <img src="files/puzzles/puzzles-object-get-custom-props.jpg">
 
-    <img src="files/puzzles/puzzles-object-get-custom-props-example2.jpg" style="max-width: 819px">
+    <img src="files/puzzles/puzzles-object-get-custom-props-example.jpg" style="max-width: 819px">
 
-    <p>Custom properties can be assigned  in 3ds Max via the *User Defined Properties* panel, or in Blender by using the *Custom Properties* panel.</p>
+    <p>Custom properties can be assigned in *Blender* by using the *Custom Properties* panel:</p>
 
-    <img src="files/puzzles/puzzles-object-get-custom-props-example.jpg" style="max-width: 725px">
+    <img src="files/puzzles/puzzles-object-get-custom-props-blender.jpg" class="centered" style="max-width: 725px">
 
+    <p>or in *3ds Max* by typing properties in the *Object Properties* dialog:</p>
 
+    <img src="files/puzzles/puzzles-object-get-custom-props-max.jpg" class="centered" style="max-width: 402px">
+
+    <p>or in *Maya* by using the <strong>Attributes->Add Attributes...</strong> menu in the attribute editor:</p>
+
+    <img src="files/puzzles/puzzles-object-get-custom-props-maya-add.jpg" class="centered" style="max-width: 463px">
+
+    <img src="files/puzzles/puzzles-object-get-custom-props-maya.jpg" class="centered" style="max-width: 473px">
+
+    <p>In case of Maya you need to assign additional *customProperties* attribute with the list of space-separated custom property names.</p>
+
+    <img src="files/puzzles/puzzles-object-get-custom-props-maya-meta.jpg" class="centered" style="max-width: 501px">
 
     [anchor:outline]
 
