--- a/manual/en/puzzles/Scenes.html
+++ b/manual/en/puzzles/Scenes.html
@@ -158,6 +158,43 @@
     <img src="files/puzzles/puzzles-scenes-export-to-gltf.jpg">
 
 
+    [anchor:raycast]
+
+    <h3>raycast</h3>
+
+    <p>
+      Cast a ray from the source point (or object) in the given direction and return a list of all intersections (if any). The third parameter of the puzzle is used to reduce a set of the intersected objects. Leave <strong>none</strong> or specify the name of your scene to intersect all objects located in the loaded scene.
+    </p>
+
+    <p>
+      The returned list contains a sequence of dictionaries with the following information:
+    </p>
+
+    <ul>
+      <li>*object* — name of the interected object</li>
+      <li>*distance* — distance to the point of intersection</li>
+      <li>*point* — XYZ coordinates (vector) of the point of intersection</li>
+      <li>*normal* — XYZ coordinates (vector) of the normal at the point of intersection</li>
+      <li>*uv* — UV coordiates of the point of intersection</li>
+    </ul>
+
+    <p>The list of intersections is sorted by distance, closest first.</p>
+
+    <img src="files/puzzles/puzzles-scenes-raycast.jpg">
+
+
+    [anchor:add_fog]
+
+    <h3>add fog</h3>
+
+    <p>
+        Add the fog effect to the scene. Use zeros either for <b>RGB</b> or for
+        <b>density</b> to disable the added fog.
+    </p>
+
+    <img src="files/puzzles/puzzles-scenes-add-fog.jpg">
+
+
     <h2>Having Troubles with Puzzles?</h2>
 
     <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
