--- a/manual/en/maya/GLTF-Materials.html
+++ b/manual/en/maya/GLTF-Materials.html
@@ -92,6 +92,13 @@
     <img src="files/physical-material-blender/pbr_texture_set_preview.jpg" class="centered" style="max-width: 819px;">
 
 
+    [anchor:export_to_gltf_in_runtime]
+
+    <h2>Export to glTF in Runtime</h2>
+
+    <p>With *export to gltf* puzzle you can export your models or the entire scene in realtime. Then you can download the exported model or upload to the server for permanent storage. See more in the puzzle's <a href="manual/en/puzzles/Scenes.html#export_to_gltf">reference</a>.</p>
+
+
 
     <h2>Got Questions?</h2>
 
