--- a/manual/en/puzzles/Advanced.html
+++ b/manual/en/puzzles/Advanced.html
@@ -51,6 +51,41 @@ function prepareExternalInterface(app) {
     </code>
 
 
+    [anchor:exec_script]
+
+    <h3>exec script</h3>
+
+    <p>
+        This puzzle executes the specified javascript code. The puzzle uses
+        <a href='https://ace.c9.io/'>Ace Editor</a> for displaying and editing
+        the content. See the relevant keyboard shortcuts here:
+        <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
+    </p>
+
+    <p>You can use the following built-in variables:</p>
+    <ul>
+        <li><b>app</b> - the application instance, see <a href="api/en/extras/App.html">App</a> for more details</li>
+        <li><b>v3d</b> - the v3d namespace which contains all the engine modules</li>
+        <li><b>VARS</b> - variable puzzles can be accessed through this object</li>
+        <li><b>PROC</b> - procedure puzzles can be accessed through this object</li>
+    </ul>
+
+    <img src="files/puzzles/puzzles-advanced-exec-script.jpg" style="max-width: 1000px">
+
+    <p><b>Specifics of using built-ins regarding to "Init" and other tabs</b></p>
+    <ul>
+        <li>
+            The <b>app</b> built-in variable is not available for this puzzle if
+            it's used inside the <b>Init</b> tab, since at that stage the
+            application is not properly initialized yet.
+        </li>
+        <li>
+            Variables and procedures declared in the <b>Init</b> tab can not be
+            accessed from other tabs via <b>VARS</b> and <b>PROC</b> and vice
+            versa.
+        </li>
+    </ul>
+
 
     [anchor:load_data]
 
@@ -193,6 +228,22 @@ function prepareExternalInterface(app) {
     <h3>promise value</h3>
 
     <p>Resolved promise value (in case of resolved promise) or error string (in case of rejected promise).</p>
+
+
+    [anchor:connector]
+
+    <h3>connector</h3>
+
+    <p>
+        This puzzle facilitates connecting other puzzles with each other, to
+        make it more convenient to move, delete and use them in other puzzles.
+        The most notable application is to join <a href="manual/en/puzzles/Sound.html#load_sound">load sound</a>
+        or <a href="manual/en/puzzles/Sound.html#load_video">load video</a>
+        puzzles into a single group to organize preloading of media resources
+        in your application.
+    </p>
+
+    <img src="files/puzzles/puzzles-advanced-connector.jpg">
 
 
     <h2>Having Troubles with Puzzles?</h2>
